remove PermSize and MaxPermSize deprecated java options